# sentinel-suite

./: .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
mcp-server/: README.md  pyproject.toml
mcp-server/examples/: mcp.stdio.json  mcp.uvx.json
mcp-server/src/sentinel_suite_mcp/: __init__.py  adapters.py  capabilities.py  cli.py  orchestrator.py  orchestrator_server.py  router.py  router_hook.py  server.py
mcp-server/tests/: conftest.py  test_adapters.py  test_capabilities.py  test_orchestrator.py  test_router_hook.py
plugins/code-graph/.claude-plugin/: plugin.json
plugins/code-graph/commands/: code-graph.md
plugins/code-graph/skills/code-graph/: SKILL.md
plugins/orchestrator/.claude-plugin/: plugin.json
plugins/orchestrator/commands/: octogent.md
plugins/orchestrator/scripts/: launch_octogent.py
plugins/orchestrator/skills/orchestrator/: SKILL.md
plugins/undercover/: README.md
plugins/undercover/.claude-plugin/: plugin.json
plugins/undercover/agents/: undercover.md
plugins/undercover/commands/: undercover.md
plugins/undercover/demo/: demo.py
plugins/undercover/hooks/: hooks.json
plugins/undercover/scripts/: hook_guard.py  hook_inject.py  undercover.py
plugins/undercover/skills/undercover/: SKILL.md
plugins/undercover/tests/: test_undercover.py
scripts/: setup_sentinel_suite.py  smoke_wheel.py
